Male poprawki i dopracowywanie rozdzialu o SociaLite

--- a/0introduction.tex
+++ b/0introduction.tex
@@ -64,3 +64,8 @@ For a given set $V \subseteq \textbf{var}$ of free variables, a function $\nu: V
 If $f$ is a function $f: D \to D$ and $f(x) = x$ for an $x \in D$, then $x$ is called a \emph{fix-point} of $f$.
 \end{defn}
 
+\todo{Powerset $\ps$}
+
+\begin{defn}
+
+\end{defn}
