--- a/praca.tex
+++ b/praca.tex
@@ -11,6 +11,7 @@
 \usepackage[section]{placeins}
 \usepackage[font=small]{caption}
 \usepackage{color}
+\usepackage[section]{placeins}
 
 
 
@@ -62,6 +63,7 @@
 \theoremstyle{remark}
 \newtheorem*{rem}{Remark}
 \newtheorem*{note}{Note}
+\newtheorem*{prof}{Proof}
 
 \newcommand{\todo}[1]{\textcolor{red}{\fbox{TODO} #1}}
 \newcommand{\pomysl}[1]{\textcolor{cyan}{\fbox{DO ROZWAŻENIA} #1}}
@@ -72,6 +74,7 @@
 \newcommand{\aggcol}{\textit{aggcol} }
 \newcommand{\assign}{:-}
 \newcommand{\margp}[2]{{{\color{magenta} \emph{#1} \color{blue} #2}}}
+\newcommand{\ps}{\mathcal{P} }
 
 \def\changemargin#1#2{\list{}{\rightmargin#2\leftmargin#1}\item[]}
 \let\endchangemargin=\endlist 
